--- a/examples/external_device_examples/live_examples/spynnaker.cfg
+++ b/examples/external_device_examples/live_examples/spynnaker.cfg
@@ -3,6 +3,6 @@ create_database = True
 wait_on_confirmation = True
 send_start_notification = True
 create_routing_info_to_neuron_id_mapping = True
-listen_port = 19998
+listen_port = None
 notify_port = 19999
 notify_hostname = localhost
